Added Projectile Textures
Remade Weapon.cs
Added WeaponCreator.cs
Removed WeaponEntity.cs

--- a/tank_mono/tank_mono/tank_mono.csproj
+++ b/tank_mono/tank_mono/tank_mono.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Tank.cs" />
     <Compile Include="TankManager.cs" />
     <Compile Include="Weapon.cs" />
-    <Compile Include="WeaponEntity.cs" />
+    <Compile Include="WeaponCreator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
