--- a/tank_mono/tank_mono/app.config
+++ b/tank_mono/tank_mono/app.config
@@ -1,3 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="tank_mono.menu" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <userSettings>
+        <tank_mono.menu>
+            <setting name="Resolution" serializeAs="String">
+                <value>1920x1080</value>
+            </setting>
+            <setting name="Volume" serializeAs="String">
+                <value>66</value>
+            </setting>
+            <setting name="d" serializeAs="String">
+                <value />
+            </setting>
+        </tank_mono.menu>
+    </userSettings>
 </configuration>
