--- a/tank_mono/tank_mono/tank_mono.csproj
+++ b/tank_mono/tank_mono/tank_mono.csproj
@@ -44,6 +44,7 @@
     <Compile Include="GameSettings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScrollingLayers.cs" />
     <Compile Include="Tank.cs" />
     <Compile Include="TankManager.cs" />
     <Compile Include="TerrainManager.cs" />
