--- a/tank_mono/tank_mono/tank_mono.csproj
+++ b/tank_mono/tank_mono/tank_mono.csproj
@@ -39,8 +39,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
+    <Compile Include="KeyboardComponent.cs" />
     <Compile Include="MainMenu.cs" />
-    <Compile Include="menu.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="menu.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
