--- a/tank_mono/tank_mono/tank_mono.csproj
+++ b/tank_mono/tank_mono/tank_mono.csproj
@@ -47,18 +47,19 @@
     <Compile Include="Game1.cs" />
     <Compile Include="GameSettings.cs" />
     <Compile Include="PerlinNoise.cs" />
+    <Compile Include="PickUp.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Projectile.cs" />
-    <Compile Include="ProjectileManager.cs" />
+    <Compile Include="Managers\ProjectileManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Managers\RandomObjectManager.cs" />
     <Compile Include="ScrollingLayers.cs" />
     <Compile Include="Tank.cs" />
-    <Compile Include="TankManager.cs" />
+    <Compile Include="Managers\TankManager.cs" />
     <Compile Include="Managers\TerrainManager.cs" />
     <Compile Include="Managers\TextManager.cs" />
     <Compile Include="Weapon.cs" />
-    <Compile Include="WeaponCreator.cs" />
+    <Compile Include="Managers\WeaponCreator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
