--- a/tank_mono/tank_mono/tank_mono.csproj
+++ b/tank_mono/tank_mono/tank_mono.csproj
@@ -49,12 +49,12 @@
     <Compile Include="PerlinNoise.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Projectile.cs" />
-    <Compile Include="ProjectileManager.cs" />
+    <Compile Include="Managers\ProjectileManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Managers\RandomObjectManager.cs" />
     <Compile Include="ScrollingLayers.cs" />
     <Compile Include="Tank.cs" />
-    <Compile Include="TankManager.cs" />
+    <Compile Include="Managers\TankManager.cs" />
     <Compile Include="Managers\TerrainManager.cs" />
     <Compile Include="Managers\TextManager.cs" />
     <Compile Include="Weapon.cs" />
