--- a/tank_mono/tank_mono/tank_mono.csproj
+++ b/tank_mono/tank_mono/tank_mono.csproj
@@ -48,7 +48,7 @@
     <Compile Include="GameSettings.cs" />
     <Compile Include="PerlinNoise.cs" />
     <Compile Include="PickUp.cs" />
-    <Compile Include="PickUpManager.cs" />
+    <Compile Include="Managers\PickUpManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Managers\ProjectileManager.cs" />
