--- a/tank_mono/tank_mono/tank_mono.csproj
+++ b/tank_mono/tank_mono/tank_mono.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tank.cs" />
     <Compile Include="TankManager.cs" />
+    <Compile Include="UI.cs" />
     <Compile Include="Weapon.cs" />
     <Compile Include="WeaponCreator.cs" />
   </ItemGroup>
